OutOfMemoryDialog: changing memory settings